Added Spanish and Arabic in CanadaTranslator